# FlappyBird

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  dependencies.cmake  main.cpp  nanoengine.config.json  project_options.cmake
assets/: assets.json
assets/images/: board.piskel  coin-animation.piskel
assets/scripts/pong/: pong.lua
assets/spritesheet/: player.sheet.json
cmake/: cpm.cmake  version.cmake  warnings.cmake
cmake/sdl2/: sdl2_image-config.cmake  sdl2_mixer-config.cmake  sdl2_ttf-config.cmake
src/: CMakeLists.txt  Registry.cpp  Registry.hpp  main.cpp  version.hpp.in
src/Pong/: Pong.cpp  Pong.hpp  main.cpp
src/common/: Button.cpp  Button.hpp  Const.hpp  Delegate.hpp  Drawer.cpp  Drawer.hpp  ImGuiLogDebugLog.cpp  ImGuiLogDebugLog.hpp  Input.cpp  Input.hpp  Logger.hpp  SpdLog.hpp  Text.cpp  Text.hpp
src/ecs/: Entity.cpp  Entity.hpp
src/ecs/components/: RigidBody.hpp  Sprite.hpp  Transform.hpp
src/ecs/systems/: BaseSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  Script.cpp  Script.hpp  ScriptHelpers.cpp  ScriptHelpers.hpp  ScriptSystem.cpp  ScriptSystem.hpp  SystemsManager.hpp
src/entity/: Entity.cpp  Entity.hpp
src/gamer/: Configuration.hpp  Context.cpp  Context.hpp  Delegate.hpp  EngineConfiguration.hpp  Errors.hpp  Font.cpp  Font.hpp  FontOwner.cpp  FontOwner.hpp  Game.cpp  Game.hpp  Gamer.cpp  Gamer.hpp  Input.cpp  Input.hpp  Music.cpp  Music.hpp  MusicOwner.cpp  MusicOwner.hpp  Registry.hpp  Renderer.cpp  Renderer.hpp  ScriptEngine.cpp  ScriptEngine.hpp  Sound.cpp  Sound.hpp  SoundOwner.cpp  SoundOwner.hpp  Texture.cpp  Texture.hpp  TextureOwner.cpp  TextureOwner.hpp  Window.cpp  Window.hpp
src/helpers/: FileReader.cpp  FileReader.hpp  ImGuiRender.hpp  LuaApi.cpp  LuaApi.hpp
src/resource/: AssetContainer.hpp  AssetIDs.hpp  AssetStore.cpp  AssetStore.hpp  AudioManager.cpp  AudioManager.hpp  FontManager.cpp  FontManager.hpp  ResourceManager.hpp  TextureManager.cpp  TextureManager.hpp
src/sprite/: SpriteSheet.cpp  SpriteSheet.hpp
src/state/: BaseState.hpp  DefaultState.cpp  DefaultState.hpp  MenuState.cpp  MenuState.hpp  StateManager.cpp  StateManager.hpp  States.hpp
tests/: CMakeLists.txt  asset_tests.cpp  assets_load_tests.cpp  ecs_tests.cpp
